# ProjektZespolowy-PWDoom

./: .clang-format  .clang-tidy  .coderabbit.yaml  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  run.sh  watch.sh
.github/workflows/: ci.yml
assets/maps/: map01.wad  map02_dg.wad
hooks/: pre-commit
include/game/: collision.h  doomdef.h  game.h  map.h  player.h  tables.h
include/mem/: arena.h
include/render/: bsp.h  render.h
include/wad/: wad.h
src/: main.c
src/game/: collision.c  game.c  map.c  player.c  tables.c
src/mem/: arena.c
src/render/: bsp.c  render.c
src/wad/: wad.c
tests/: test_smoke.c
tests/mem/: arena_tests.c
tests/render/: bsp_tests.c
tests/wad/: wad_tests.c
